# AutoQAC-rs

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURE_PARITY.md  MANUAL_TESTING.md  README.md
AutoQAC Data/: AutoQAC Config.yaml
src/: lib.rs  logging.rs  main.rs  metrics.rs
src/config/: mod.rs
src/models/: app_state.rs  config.rs  mod.rs
src/services/: cleaning.rs  game_detection.rs  mod.rs
src/state/: mod.rs
src/ui/: bridge.rs  controller.rs  mod.rs
tests/: config_integration_tests.rs  game_detection_tests.rs  service_integration_tests.rs  state_integration_tests.rs
ui/: main.slint
ui/fluent/: button.slint  card.slint  checkbox.slint  dialog.slint  input.slint  styles.slint
